--- a/Index.html
+++ b/Index.html
@@ -83,10 +83,7 @@
                 <section></section>
 
    <!--this is footer   section -->
-          <footer>
-
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam qui a ipsa, molestias deserunt neque optio, laudantium repellendus ab, aperiam ullam! Blanditiis obcaecati pariatur nesciunt quis veritatis, possimus voluptate molestias!</p>
-          </footer>
+          <footer></footer>
       
 
     </body>
