--- a/Index.html
+++ b/Index.html
@@ -83,7 +83,10 @@
                 <section></section>
 
    <!--this is footer   section -->
-          <footer></footer>
+          <footer>
+            <h2>this is my website</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, nemo praesentium similique numquam neque ad obcaecati. Eius facilis quaerat nostrum veritatis nobis laudantium nulla, sapiente quisquam ipsam eaque non officia.</p>
+          </footer>
       
 
     </body>
