--- a/Index.html
+++ b/Index.html
@@ -84,7 +84,7 @@
 
    <!--this is footer   section -->
           <footer>
-           
+          <p> eureretrethrtdueteyu</p>
           </footer>
       
 
