--- a/Index.html
+++ b/Index.html
@@ -84,8 +84,8 @@
 
    <!--this is footer   section -->
           <footer>
-          <p> Rahman Talukder Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio minus aspernatur exercitationem eum nihil obcaecati. Eum nostrum eligendi molestiae libero! Nobis ex perferendis molestias eveniet quod iste, nulla ab hic!</p>
-          </footer>git 
+            
+          </footer>
       
 
     </body>
